Wed Jan 17 12:11:40 2007  Stefan Westerfeld  <stefan@space.twc.de>

	* tools/bsefextract.cc: Implement a spectral flux based attack/release
	detector (new options: --attack-times, --release-times), configurable
	with the --timing-window-* options.
	Added --verbose option for figuring out actual window settings. 

Wed Jan 17 08:12:53 2007  Stefan Westerfeld  <stefan@space.twc.de>

	* tools/bsefextract.cc: Made some cosmetic improvements to fix
	violations of the beast coding style.

Thu Jan 04 21:12:19 2007  Tim Janik  <timj@gtk.org>

	* tests/filecheck/Makefile.am: get rid of tmeporary file warnings.

Thu Dec 28 01:18:46 2006  Tim Janik  <timj@gtk.org>

	* web/news.doxi: 0.7.0 release announcement.

	* web/oldnews.doxi: news rotation.

	* NEWS: added missing bug numbers.

	* web/Makefile.am: preview dir update.

Wed Dec 27 22:50:04 2006  Tim Janik  <timj@gtk.org>

	* released beast 0.7.1.

	* beast-gtk/bstmain.c (beast_show_about_box): added "Hanno Behrens" to 
	contributors.

Tue Dec 26 23:24:01 2006  Tim Janik  <timj@gtk.org>

	* configure.in: 
	* data/bse.pc.in: removed mad.pc from dependencies because libmad
	doesn't come with a mad.pc in every distribution.

Sat Dec 23 20:56:33 2006  Tim Janik  <timj@gtk.org>

	* tests/audio/sum-diff-test.ref: 
	* tests/audio/sum-diff-test.bse:
	* tests/audio/Makefile.am: added sum-diff-test: test rule to test
	BseSummation audio-diff output channel.

	* tests/audio/bse2wav.scm: added option parsing, support --seconds <>
	option to constrain the time intervall used for recording. 

	* Makefile.am: depend on automake 1.9.

Tue Dec 19 15:47:32 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/audio/Makefile.am: Tiny fix so that the new tests really are
	performed.

Tue Dec 19 15:12:18 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/audio/Makefile.am:
	* tests/audio/osctranspose1.ref:
	* tests/audio/osctranspose1.bse:
	* tests/audio/osctranspose2.ref:
	* tests/audio/osctranspose2.bse: Added tests for the transpose